k8s/keycloak 2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0
          args: ["start-dev"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: chat
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
