k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: chat-platform
  name: chat-platform-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # Для WebSocket
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
spec:
  ingressClassName: nginx
  rules:
  - host: chat.example.com  # ← ваш домен
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-chat
            port:
              number: 80

      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8080

      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 8081

      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 8081
